# pmdk-rs

./: .gitlab-ci.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
pmdk-sys/: Cargo.toml  README.md  build.rs
pmdk-sys/src/: base.rs  lib.rs  obj.rs
src/: error.rs  lib.rs
