[package]
name = "pmdk"
description = "Rust wrapper for pmdk"
version = "0.0.1"
authors = ["RepliXio Developers <open.source@replixio.com>"]
license = "Apache-2.0 OR MIT"
keywords = ["pmdk", "pmem", "pmemio"]
readme = "README.md"
repository = "https://github.com/pmdk-rs.git"
edition = "2018"
exclude = [
    ".gitignore",
    ".travis.yml",
    "deploy.sh",
    "test/**/*",
]

[badges]
maintenance = { status = "experimental" }

[dependencies]
libc = "0.2"
pmdk-sys = { path = "pmdk-sys" }
