[package]
name = "pmdk"
description = "Rust wrapper for pmdk"
version = "0.0.6"
authors = ["RepliXio Developers <open.source@replixio.com>"]
license = "Apache-2.0 OR MIT"
keywords = ["pmdk", "pmem", "pmemio"]
readme = "README.md"
repository = "https://github.com/pmdk-rs.git"
documentation = "https://docs.rs/pmdk"
edition = "2018"
exclude = [
    ".gitignore",
    ".travis.yml",
    "deploy.sh",
    "test/**/*",
]

[badges]
maintenance = { status = "experimental" }

[dependencies]
crossbeam-queue = "0.1.2"
failure = "0.1"
libc = "0.2"
pmdk-sys = { path = "pmdk-sys", version = "0.0.6" }
