[package]
name = "pmdk"
description = "Rust wrapper for pmdk"
version = "0.5.0"
authors = ["RepliXio Developers <open.source@replixio.com>"]
license = "Apache-2.0 OR MIT"
keywords = ["pmdk", "pmem", "pmemio"]
readme = "README.md"
repository = "https://gitlab.com/replix/pmdk-rs.git"
documentation = "https://docs.rs/pmdk"
edition = "2018"
exclude = [
    ".gitignore",
    ".travis.yml",
    "deploy.sh",
    "test/**/*",
]

[badges]
maintenance = { status = "experimental" }

[workspace]
members = ["pmdk-sys"]

[dependencies]
crossbeam-queue = "0.1.2"
failure = "0.1"
futures = "0.1"
libc = "0.2"
pmdk-sys = { path = "pmdk-sys", version = "0.5.0" }

[dev-dependencies]
futures-cpupool = "0.1"
nix = "0.15"
tokio = "0.1"
tempfile = "3.1"
