[package]
name = "pmdk-sys"
description = "FFI bindings to pmdk"
version = "0.0.5"
authors = ["RepliXio Developers <open.source@replixio.com>"]
license = "Apache-2.0 OR MIT"
keywords = ["pmdk", "pmem", "pmemio", "libpmem", "libpmemobj"]
readme = "README.md"
repository = "https://github.com/pmdk-rs.git"
documentation = "https://docs.rs/pmdk-sys"
edition = "2018"
exclude = [
    ".gitignore",
    ".travis.yml",
    "deploy.sh",
    "test/**/*",
]

[dependencies]
libc = "0.2"
