[package]
name = "pmdk-sys"
description = "FFI bindings to pmdk"
version = "0.2.0"
authors = ["RepliXio Developers <open.source@replixio.com>"]
license = "Apache-2.0 OR MIT"
keywords = ["pmdk", "pmem", "pmemio", "libpmem", "libpmemobj"]
readme = "README.md"
repository = "https://github.com/pmdk-rs.git"
documentation = "https://docs.rs/pmdk-sys"
edition = "2018"
exclude = [
    ".gitignore",
    ".travis.yml",
    "deploy.sh",
    "test/**/*",
]
links = "pmemobj"
build = "build.rs"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
